--- a/Android App/app/src/main/res/layout/activity_register.xml
+++ b/Android App/app/src/main/res/layout/activity_register.xml
@@ -35,6 +35,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:hint="@string/name"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black"
         android:inputType="textPersonName"
         android:fontFamily="@font/inter_semi_bold"
         android:padding="16dp" />
@@ -47,6 +49,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:hint="@string/prompt_email"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:fontFamily="@font/inter_semi_bold"
         android:padding="16dp" />
@@ -59,6 +63,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:hint="@string/phone_number"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black"
         android:inputType="phone"
         android:fontFamily="@font/inter_semi_bold"
         android:padding="16dp"
@@ -72,6 +78,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:hint="@string/prompt_password"
+        android:textColor="@color/black"
+        android:textColorHint="@color/grey"
         android:inputType="textPassword"
         android:fontFamily="@font/inter_semi_bold"
         android:padding="16dp" />
@@ -84,6 +92,8 @@
         android:background="@android:color/white"
         android:ems="10"
         android:hint="@string/confirm_password"
+        android:textColorHint="@color/grey"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:fontFamily="@font/inter_semi_bold"
         android:padding="16dp" />
