--- a/Android App/app/src/main/res/layout/activity_room_code.xml
+++ b/Android App/app/src/main/res/layout/activity_room_code.xml
@@ -41,10 +41,12 @@
         android:ems="6"
         android:hint="@string/room_code"
         android:inputType="number"
+        android:textColor="@color/black"
         android:maxLength="6"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
+        android:fontFamily="@font/inter_semi_bold"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
@@ -55,10 +57,24 @@
         android:backgroundTint="@color/bahootButton"
         android:text="@string/enter"
         android:textColor="@color/white"
+        android:fontFamily="@font/inter_semi_bold"
         android:textSize="16sp"
-        android:fontFamily="@font/roboto"
         android:onClick="enterRoomCode"
         app:layout_constraintTop_toBottomOf="@+id/room_code_field"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/btnScanQR"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/inter_semi_bold"
+        android:layout_marginBottom="44dp"
+        android:text="@string/scan_QR"
+        app:layout_constraintTop_toBottomOf="@+id/enterButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
