--- a/Android App/app/src/main/res/values/colors.xml
+++ b/Android App/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#ACA9A9</color>
     <color name="bahootBackground">#46178F</color>
     <color name="bahootButton">#0275D8</color>
 </resources>
