--- a/Android App/app/src/main/res/layout/activity_stats.xml
+++ b/Android App/app/src/main/res/layout/activity_stats.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
-        android:text="Your Score"
+        android:text="@string/your_score"
         android:textSize="30sp"
         android:fontFamily="@font/inter_medium"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,12 +40,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/bahootButton"
-        android:text="Home"
+        android:text="@string/home"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreText"
-        app:layout_constraintVertical_bias="0.91"></Button>
+        app:layout_constraintVertical_bias="0.91"
+        android:onClick="home">
+
+    </Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
